--- a/src/components/Shared/Navigation/SharedNavigation.css
+++ b/src/components/Shared/Navigation/SharedNavigation.css
@@ -1,17 +1,22 @@
 .main-nav {
-  font-family: "Saira", sans-serif;
   font-size: 20px;
 }
+
 nav a {
   font-weight: 600;
   text-transform: capitalize;
   text-decoration: none;
   padding: 0;
-  color: #033b4a !important;
+  color: #fff !important;
+}
+
+.nav-color {
+  background-color: black !important;
+  transition: 0.5s ease-in;
 }
 
 .nav-design a:hover {
-  color: #ee5253 !important;
+  color: #fff !important;
 }
 .nav-design a::after {
   content: "";
@@ -20,7 +25,7 @@ nav a {
   height: 3px;
   width: 0px;
   margin: auto 0;
-  background: #2d3436;
+  background: var(--main-color);
   transition: width 0.5s ease-in-out;
 }
 
@@ -35,6 +40,12 @@ li {
 li a:active {
   color: #01d6a3 !important;
 }
-.navbar {
-  background-color: #f5f6fa !important;
+nav {
+  position: fixed !important;
+  width: 100%;
+  z-index: 9999999;
+}
+
+.btn-danger {
+  background-color: var(--main-color) !important;
 }
