--- a/src/components/Shared/Footer/FooterSection.css
+++ b/src/components/Shared/Footer/FooterSection.css
@@ -1,26 +1,26 @@
-.footer-section{
-    background: url("http://themetechmount.com/html/delmont/images/footer-bg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    font-family: "Saira"sans-serif;
-    overflow: hidden;
-    
-
+.footer-section {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  background-color: #000;
+  overflow: hidden;
 }
-li a{
-    display: block;
-    text-decoration: none;
-    color: #fff;
+.footer-section li a {
+  display: block;
+  text-decoration: none;
+  color: #fff;
 }
-li{
- list-style: none;   
- padding-top: 15px;
-
+.footer-section ul {
+  padding-left: 0px;
+}
+.footer-section li {
+  list-style: none;
+  padding-top: 15px;
+  margin-left: 0px;
 }
 
-.footer-section p{
-    font-family: "Ubuntu",Tahoma,Geneva,sans-serif;
-    font-weight: 400;
+.footer-section p {
+  font-family: "Ubuntu", Tahoma, Geneva, sans-serif;
+  font-weight: 400;
 }
