--- a/src/components/Shared/Navigation/SharedNavigation.css
+++ b/src/components/Shared/Navigation/SharedNavigation.css
@@ -8,6 +8,8 @@ nav a {
   text-decoration: none;
   padding: 0;
   color: #fff !important;
+  display: inline-block;
+  padding: 30px 0;
 }
 
 .nav-color {
@@ -36,7 +38,6 @@ nav a {
 
 li {
   margin-left: 30px;
-  padding-top: 15px;
 }
 li a:active {
   color: #01d6a3 !important;
