register-service-design

--- a/src/components/Pages/Login/Login/Login.css
+++ b/src/components/Pages/Login/Login/Login.css
@@ -17,6 +17,8 @@
 .login-page .form-control:focus {
   box-shadow: none;
   border-color: #fff !important;
+  background: rgba(0, 0, 0, 0.2);
+  color: #fff;
 }
 
 .login-page label {
