--- a/src/components/Pages/Login/Login/Login.css
+++ b/src/components/Pages/Login/Login/Login.css
@@ -29,7 +29,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: var(--section-bg);
   z-index: -1;
 }
 
