--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -11,7 +12,7 @@ body {
 :root {
   --main-color: #a90b22;
   --section-bg: #00000e;
-  --default-bg: #201d1d59;
+  --default-bg: #0b0a13;
 }
 
 h1,
