--- a/src/components/Pages/Services/Services.css
+++ b/src/components/Pages/Services/Services.css
@@ -4,6 +4,10 @@
   border-radius: 10px !important;
 }
 
+.explore-services-section {
+  min-height: 100vh;
+}
+
 /* .services-img:hover {
   transform: scale(0.9);
 } */
